--- a/work.html
+++ b/work.html
@@ -82,11 +82,11 @@
                 </div>
                 <div class="work_yt">
                     <div class="work_box">
-                        <a href="https://youtu.be/DNLe4YgYeA8" target="_blank" class="work_a">
-                            <img class="work_img" src="./img/排球.jpg" alt="排球">
+                        <a href="https://www.youtube.com/watch?v=e1822BIhIi8" target="_blank" class="work_a">
+                            <img class="work_img" src="./img/哥布林.jpg" alt="哥布林">
                         </a>
                     </div>
-                    <p class="work_p">高中日常 | 排球篇 | 注意看這群人太狠了 天花板都被打到爛了 【廢結何】</p>
+                    <p class="work_p">《哥布林的耶誕城》 | 讓哥布林再次偉大吧 | 哥布林一起強大 【廢結何】</p>
                 </div>
                 <div class="work_yt">
                     <div class="work_box">
